corrections with fonts and text in slider on mobile

--- a/src/scss/mian-page.scss
+++ b/src/scss/mian-page.scss
@@ -11,6 +11,8 @@
     grid-template-columns: 1fr 10fr 1fr;
     grid-column-gap: 10px;
     color: $mainFontColor;
+    overflow: hidden;
+
 
     @media only screen and (max-width: 930px) {
         grid-column-gap: 0px;
@@ -112,13 +114,17 @@
     h1 {
         font-family: 'Damion', cursive;
         font-size: 50px;
-        // padding-left: 15px;
+        padding-left: 15px;
         cursor: pointer;
 
         @media only screen and (min-width: 800px) {
             height: 66.5px;
             line-height: 66.5px + 50px;
             padding-left: 0px;
+        }
+
+        @media only screen and (max-width: 420px) {
+            font-size: 60px;
         }
     }
 
@@ -132,6 +138,7 @@
         align-items: center;
         justify-content: center;
         flex-flow: column;
+        cursor: pointer;
 
         @media only screen and (min-width: 800px) {
             display: none;
@@ -197,15 +204,32 @@
         &>ul {
             height: calc(100vh - 50px);
             text-align: center;
+            display: flex;
+            justify-content: center;
+            flex-flow: column;
 
             &>li {
-                line-height: 50px;
+                width: 100%;
                 height: 50px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 cursor: pointer;
+                padding: 5px 0px;
+
+                @media only screen and (max-width: 420px) {
+                    height: 60px;
+                    line-height: 60px;
+                }
 
                 a {
+                    font-size: 36px;
                     text-decoration: none;
                     color: $mainFontColor;
+
+                    @media only screen and (max-width: 420px) {
+                        font-size: 30px;
+                    }
                 }
 
                 &:hover {
@@ -287,6 +311,10 @@
         width: 90%;
     }
 
+    @media only screen and (max-width: 420px) {
+        grid-template-columns: 12fr;
+    }
+
     .slider__column {
         &--first {
             align-self: center;
@@ -300,7 +328,12 @@
             }
 
             @media only screen and (max-width: 576px) {
-                font-size: 36px;
+                text-align: center;
+                padding-right: 0px;
+            }
+
+            &>span {
+                display: block;
             }
         }
 
@@ -314,7 +347,8 @@
             }
 
             @media only screen and (max-width: 576px) {
-                font-size: 56px;
+                font-size: 60px;
+                text-align: center;
             }
         }
     }
