--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -136,3 +136,17 @@ button {
     border: 0;
     cursor: pointer;
 }
+
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+}
